[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "imapfetch"
author = "Anton Semjonov"
author-email = "hello@semjonov.de"
home-page = "https://github.com/ansemjo/imapfetch"
description-file = "README.md"
requires-python = "~=3.5"
requires = [
  "IMAPClient >= 2.2.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Communications :: Email",
  "Topic :: System :: Archiving",
  "Environment :: Console",
]

[tool.flit.scripts]
imapfetch = "imapfetch:commandline"